--- a/app.json
+++ b/app.json
@@ -1,14 +1,21 @@
 {
-"repoName":"template-list-view-ad",
-"title":"List View App (App Designer)",
-"tooltip":"[App Designer Ready] Use this template to provide a simple list view app that has a main view with scrollable list and detail view for each list item. For example, create a Mail app, Messages app or Twitter* app.",
-"description":"[App Designer Ready] Use this template to provide a simple list view app that has a main view with scrollable list and detail view for each list item. For example, create a Mail app, Messages app or Twitter* app.",
-"articleUrl":"http://software.intel.com/en-us/html5/articles/templates-to-get-started-with-html5-mobile-app-development",
-"visible" : "true",
-"sortWeight":"0.6",
-"type":"appdesigner",
-"keywords":["App Designer"],
-"highlights" : ["App Designer"],
-"relationship":"list view",
-"projectTypeName": "com.intel.xdk.projecttype.webapp"
+   "type" : "appdesigner",
+   "sortWeight" : "0.6",
+   "visible" : "true",
+   "tooltip" : "[App Designer Ready] Use this template to provide a simple list view app that has a main view with scrollable list and detail view for each list item. For example, create a Mail app, Messages app or Twitter* app.",
+   "repoName" : "template-list-view-ad",
+   "relName" : null,
+   "title" : "List View App (App Designer)",
+   "articleUrl" : "http://software.intel.com/en-us/html5/articles/templates-to-get-started-with-html5-mobile-app-development",
+   "appPreview" : null,
+   "relationship" : "list view",
+   "highlights" : [
+      "App Designer"
+   ],
+   "appName" : null,
+   "projectTypeName" : "com.intel.xdk.projecttype.webapp",
+   "description" : "[App Designer Ready] Use this template to provide a simple list view app that has a main view with scrollable list and detail view for each list item. For example, create a Mail app, Messages app or Twitter* app.",
+   "keywords" : [
+      "App Designer"
+   ]
 }
