--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
 "title":"List View App (App Designer)",
 "tooltip":"[App Designer Ready] Use this template to provide a simple list view app that has a main view with scrollable list and detail view for each list item. For example, create a Mail app, Messages app or Twitter* app.",
 "description":"[App Designer Ready] Use this template to provide a simple list view app that has a main view with scrollable list and detail view for each list item. For example, create a Mail app, Messages app or Twitter* app.",
-"articleUrl":"http://software.intel.com/en-us/html5/articles/templates-to-get-started-with-html5-mobile-app-development",
+"articleUrl":"https://software.intel.com/en-us/xdk/docs/templates-to-get-started-with-xdk-app-development",
 "visible" : "true",
 "sortWeight":"0.6",
 "type":"appdesigner",
