add section and group to app.json

--- a/app.json
+++ b/app.json
@@ -1,4 +1,6 @@
 {
+   "section" : "templates",
+   "group" : "other",
    "visible" : true,
    "tooltip" : "[App Designer Ready] Use this template to provide a simple list view app that has a main view with scrollable list and detail view for each list item. For example, create a Mail app, Messages app or Twitter* app.",
    "description" : "[App Designer Ready] Use this template to provide a simple list view app that has a main view with scrollable list and detail view for each list item. For example, create a Mail app, Messages app or Twitter* app.",
